--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "react-hook-form": "^7.53.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.6.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/node": "22.7.7",
+    "@types/react": "18.3.11",
     "eslint": "^8",
     "eslint-config-next": "14.2.9",
     "postcss": "^8",
