--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.439.0",
-    "next": "14.2.9",
+    "next": "^15.3.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
